--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header>
         <h1>Umair Abbas</h1>
         <p>Welcome to My Portfolio</p>
-        <img src="C:\Users\Dell\Downloads\WhatsApp Image 2023-10-06 at 5.50.54 PM.jpeg" alt="Profile Picture" width="175" height="175">
+        <img src="https://github.com/umairkhan1998/WP-Fall23/blob/Portfolio/Resume-umair-abbas.pdf" alt="Profile Picture" width="175" height="175">
     </header>
 
     <nav><!-- Navigation sections-->
